--- a/style.css
+++ b/style.css
@@ -2,13 +2,12 @@
 	--background-width: 600px;
 }
 body {
+	margin: 0;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	background-image: url("./img/galaxy-rainbow.jpg");
 	background-size: cover;
-	margin-top: 50px;
 }
 p {
 	color: white;
@@ -31,10 +30,29 @@ p {
 
 .main {
 	display: flex;
-	gap: 20px;
-	align-items: center;
+	gap: 40px;
 }
 
+.generator {
+	/*border: 1px solid white;*/
+}
+
+#generateBtn {
+	background: #056ca3;
+	color: white;
+	border: none;
+	border-radius: 10px;
+	margin: 10px 0px 0px 19px;
+	width: 189px;
+	height: 30px;
+}
+
+.right-side {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 .tile {
 	background: black;
 	border-radius: 10%;
@@ -42,8 +60,10 @@ p {
 
 .footer {
 	width: 100%;
-	height: 75px;
-	background: lightgray;
+	height: 70px;
+	background: rgb(164, 164, 164);
+	position: fixed;
+	bottom: 0;
 	text-align: center;
 	line-height: 0.5;
 }
