Debug: remove a cat before adding a new one

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button:hover {
 .footer {
 	width: 100%;
 	height: 45px;
-	background: var(--gray);
+	background: rgba(78, 138, 172, 0.25);
 	position: fixed;
 	bottom: 0;
 	text-align: center;
